objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Commentaires_EMLYON__c</fullName>
        <label>Commentaires EMLYON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_External_What_Id__c</fullName>
        <description>Champ stockant le champ polymorphique WhatId. C&apos;est utile notamment pour conserver les liens entre les objets en vue de l&apos;insertion des données dans un nouvel environnement.</description>
        <externalId>true</externalId>
        <label>TECH_External_What_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_External_Who_Id__c</fullName>
        <description>Champ stockant le champ polymorphique WhoId. C&apos;est utile notamment pour conserver les liens entre les objets en vue de l&apos;insertion des données dans un nouvel environnement.</description>
        <externalId>true</externalId>
        <label>TECH_External_Who_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_Is_Record_Transferring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Champ technique booléen qui ne sera utilisé que lors d&apos;un transfert de données pertinentes entre l&apos;environnement de production et une sandbox</description>
        <label>TECH_Is_Record_Transferring</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>